/** Interface pour le patron de conception "Memento" */
public interface Memento {

}