/**
 * Commande pour deplacer le curseur secondaire
 */
public class MoveCursor2 extends MoveCursor {
    /**
     * Commande pour deplacer le curseur secondaire
     * 
     * @param offset Nombre de caracteres lors du deplacement
     */
    public MoveCursor2(int offset) {
        super(2, offset);
    }
}
