@startuml classDiagram
skinparam groupInheritance 4
skinparam Linetype polyline


class Application {
 
}


class Window {

}

class ZoneDeTravail {
    ZoneDeTravail Instance

    String Texte
    String Buffer
    Int posCursor1
    Int posCursor2

    moveCursor(int nbCursor, int offset)
    copy()
    paste()
    delete()
    Insertchar(char a)
    Save():Memento
    Restore(m Memento)
    

}

class Input {
    keyPressed()
}

class Script{
    getListEvent()
}

abstract Command {
    Execute()
}

abstract MoveCursor {
    int cursor
    int offset
    Execute()
}

class MoveCursor1 {
    Execute()
}
class MoveCursor2 {
    Execute()
}

class Copy {
    Execute()
}

class Delete{
    Execute()
}

class Paste {
    Execute()
}

class Cut {
    Execute()
}

class InsertChar {
    char caracter
    Execute()
    getKey()
}

class ToggleScript{
    Execute()
}

class UseScript{
    Execute()
}

Command <|--- MoveCursor
class Undo {
    Execute()
}

class Forward {
    Execute()
}

interface Memento {
    
}

class Sauvegarde {
    state: ZoneDeTravail
}

class Historique {
    undo()
    forward()
}


Application *-- Window
Application "1" *-- "1" ZoneDeTravail
Application *-- Input
Application *-- Window
Input *-- Command
ZoneDeTravail -- Command
Historique -- Command

Command <|--- Delete
Command <|--- Copy

Command <|--- Paste
Command <|--- Cut
Command <|--- InsertChar

Command <|--- ToggleScript
Command <|--- UseScript

MoveCursor <|-- MoveCursor1
MoveCursor <|-- MoveCursor2
Command <|--- Undo
Command <|--- Forward

Command --* Cut : Copy, Delete
Command --* InsertChar : Delete
Command --* Paste : Delete
Input -- InsertChar : getKey
Window -- ZoneDeTravail

Input "*" -- "1" Script : listEvent
Input -- ToggleScript : toggleScript
Script --* UseScript : listInput

ZoneDeTravail --> Memento : Save
Memento <|-- Sauvegarde
Memento "1" -- "*" Historique


@enduml